# blog-factory

./: .gitignore  LICENSE  README.md  commitlint.config.js  gatsby-config.js  gatsby-meta-config.js  gatsby-node.js  package.json  pyproject.toml  tsconfig.json
.github/workflows/: auto-upload-contents.yaml  initialize-images.yaml
scripts/: config.py  generate-content.ts  generate_content.py  initialize-images.ts  initialize_images.py
scripts/prompts/: content-creator.ts  content_creator.py  meta-generator.ts  meta_generator.py  outline-builder.ts  outline_builder.py
src/components/: familyDropdown.tsx  postNavigator.tsx  seo.tsx
src/components/navBar/: navBar.tsx
src/components/navBar/themeToggleButton/: themeToggleButton.tsx
src/components/postGrid/: postGrid.tsx
src/layouts/: layout.tsx
src/pages/: index.tsx
src/posts/blog/: ai-&-machine-learning-in-trading--a-comprehensive-guide.md  example-post.md  navigating-short-term-stock-trading-strategies-with-market-trends.md  revolutionizing-stock-trading--ai-&-machine-learning-impact.md  stock-trading-for-beginners--a-comprehensive-guide.md  technical-analysis-in-stock-trading--a-beginner's-guide.md  technical-analysis-in-stock-trading--a-comprehensive-guide-for-beginners.md  top-10-high-growth-stocks-for-2023--expert-picks-&-analysis.md  trading-for-beginners--a-comprehensive-guide---stock-basics,-brokers,-plans.md  trading-for-beginners--a-comprehensive-guide-to-stock-market-investing.md  trading-for-beginners--a-comprehensive-guide-to-stock-market-success.md  understanding-candlestick-patterns--a-beginner's-guide.md
src/styles/: globalStyle.ts  markdown.ts
src/templates/: blogPost.tsx
(+2 files in other folders)
