[tool.poetry]
name = "blog-factory"
version = "0.1.0"
description = ""
authors = ["Minki Kim <mingi3314@gmail.com>"]
readme = "README.md"
packages = [
    { include = "scripts", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.11"
langchain-mistralai = "^0.1.10"
typer = "^0.12.3"
langchain-openai = "^0.1.19"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
mypy = "^1.11.0"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
fix = true
exclude = [
    '*.pyi',
    "site-packages",
    "node_modules",
    ".mypy_cache",
    ".ruff_cache",
]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
unfixable = ["B"] # Avoid trying to fix flake8-bugbear (`B`) violations.
preview = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"constants.py" = ["E501"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
allow_redefinition = true
show_column_numbers = true
pretty = true